[+Raul] Add generated server and modified to return parsed JSON
