# swagger.yaml
@@ -46,45 +46,48 @@ definitions:
     properties:
       data:
         type: "string"
-        default: "{
-          data: {
-            petition: {
-              id: 40,
-              title: {
-                es: 'Plan de Actuacion municipal',
-                ca: 'Pla d'Actuació Municipal',
-              },
-              description: {
-                es: 'Descripcion de peticion',
-                ca: 'This is an amazing petition that you want to participate in',
-              },
-              json_schema: {
-                optional: [
-                  {
-                    scope: 'can-access',
-                    object: 'voter',
-                    predicate: 'schema:dateOfBirth',
-                  },
-                  {
-                    scope: 'can-access',
-                    object: 'voter',
-                    predicate: 'schema:gender',
+        default: '{
+          "petition": {
+            "id": 40,
+            "title": {
+              "es": "Plan de Actuacion municipal",
+              "ca": "Pla dActuació Municipal"
+            },
+            "description": {
+              "es": "Descripcion de peticion",
+              "ca": "This is an amazing petition that you want to participate in"
+            },
+            "json_schema": {
+              "optional": [
+                {
+                  "scope": "can-access",
+                  "object": "voter",
+                  "predicate": "schema:dateOfBirth"
+                },
+                {
+                  "scope": "can-access",
+                  "object": "voter",
+                  "predicate": "schema:gender"
+                },
+                {
+                  "scope": "can-access",
+                  "object": "voter",
+                  "predicate": "schema:district"
+                }
+              ],
+              "mandatory": [
+                {
+                  "scope": "can-access",
+                  "object": "Barcelona",
+                  "predicate": "schema:addressLocality",
+                  "provenance": {
+                    "url": "http://atlantis-decode.s3-website-eu-west-1.amazonaws.com"
                   }
-                ],
-                mandatory: [
-                  {
-                    scope: 'can-access',
-                    object: 'Barcelona',
-                    predicate: 'schema:addressLocality',
-                    provenance: {
-                      url: 'http://atlantis-decode.s3-website-eu-west-1.amazonaws.com',
-                    },
-                  },
-                ],
-              },
+                }
+              ]
             }
           }
-        }"
+        }'
       error:
         type: "string"
         example: ""
